Added deploying to Azure App Service

--- a/.github/workflows/buildandtest.yml
+++ b/.github/workflows/buildandtest.yml
@@ -22,3 +22,11 @@ jobs:
         run: dotnet build --configuration Release --no-restore
       - name: Test
         run: dotnet test --no-restore --verbosity normal
+      - name: Publish
+        run: dotnet publish -c Release -o Publish
+      - name: Deploy
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: NotesBin
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          package: './Publish'
