--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,5 +1,20 @@
 ﻿{
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:1907",
+      "sslPort": 44322
+    }
+  },
   "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "NotesBin": {
       "commandName": "Project",
       "launchBrowser": true,
